<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_eva_arrow_ios_back_fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/tiffanyBlue_100"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <ImageView
        android:id="@+id/iv_name"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/ic_icon_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/input_name"
        android:textColorHint="@color/pearl_aqua"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.example.storyapp.ui.costumview.EmailView
        android:id="@+id/et_email"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/input_email"
        android:textColorHint="@color/pearl_aqua"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_email"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <com.example.storyapp.ui.costumview.PasswordView
        android:id="@+id/et_password"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColorHint="@color/pearl_aqua"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_password"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_name"
        app:srcCompat="@drawable/ic_icon_email" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_email"
        app:srcCompat="@drawable/ic_icon_password" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_primary"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/have_account"
        android:textColor="@color/pearl_aqua"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@color/tiffanyBlue_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>