<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/tv_regist_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/not_have_account"
        android:textColor="@color/pearl_aqua"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_account"
        android:textColor="@color/tiffanyBlue_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_regist_desc"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_primary"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_blue"
        app:srcCompat="@drawable/ic_icon_email" />

    <com.example.storyapp.ui.costumview.EmailView
        android:id="@+id/et_email"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="123dp"
        android:fontFamily="@font/roboto_bold"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        android:textColorHint="@color/pearl_aqua"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_email"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_blue" />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_email"
        app:srcCompat="@drawable/ic_icon_password" />

    <com.example.storyapp.ui.costumview.PasswordView
        android:id="@+id/et_password"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:textColorHint="@color/pearl_aqua"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_password"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <ImageView
        android:id="@+id/iv_logo_blue"
        android:layout_width="237dp"
        android:layout_height="64dp"
        android:layout_marginTop="174dp"
        android:src="@drawable/ic_logo___splash_screen___blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>